--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,12 +18,24 @@ FetchContent_MakeAvailable(Catch2)
 add_executable(farm_printer_test tests/farm_printer_test.cpp src/farm_printer.cpp src/farm.cpp src/soil.cpp src/player.cpp)
 add_executable(farm_test tests/farm_test.cpp src/farm.cpp src/soil.cpp src/player.cpp)
 add_executable(soil_test tests/soil_test.cpp src/soil.cpp)
+
 add_executable(carrot_test tests/carrot_test.cpp)
+add_executable(lettuce_test tests/lettuce_test.cpp)
+add_executable(spinach_test tests/spinach_test.cpp)
+add_executable(beet_test tests/beet_test.cpp)
+add_executable(brusselSprouts_test tests/brusselSprouts_test.cpp)
+
 add_executable(player_test tests/player_test.cpp src/player.cpp)
 add_executable(main main.cpp src/farm.cpp src/farm_printer.cpp src/soil.cpp src/player.cpp)
 
 target_link_libraries(farm_test PRIVATE Catch2::Catch2WithMain)
 target_link_libraries(farm_printer_test PRIVATE Catch2::Catch2WithMain)
 target_link_libraries(soil_test PRIVATE Catch2::Catch2WithMain)
+
 target_link_libraries(carrot_test PRIVATE Catch2::Catch2WithMain)
+target_link_libraries(lettuce_test PRIVATE Catch2::Catch2WithMain)
+target_link_libraries(spinach_test PRIVATE Catch2::Catch2WithMain)
+target_link_libraries(beet_test PRIVATE Catch2::Catch2WithMain)
+target_link_libraries(brusselSprouts_test PRIVATE Catch2::Catch2WithMain)
+
 target_link_libraries(player_test PRIVATE Catch2::Catch2WithMain)
